--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 <body>
     <h1>Rick and morty - Personagens</h1>
     <div class="search-box">
-        <input type="number" id="pageInput" min="1" placeholder="digite uma pagina">
+        <input type="number" id="pageInput" min="1" placeholder="digite uma pagina (1/42)">
         <button id="searchbtn">Buscar</button>
-        <div id="results" class="reslts"></div>
+        <div id="results" class="results"></div>
     </div>
-    <script scr="script.js"></script>
+    <script src="script.js"></script>
 </body>
+<footer>
+     <button id="passbtn">=></button>
+</footer>
 </html>
